--- a/templates/product/edit.html.twig
+++ b/templates/product/edit.html.twig
@@ -9,7 +9,8 @@
 
     {{ include('product/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_product_index') }}">back to list</a>
+    <a href="{{ path('app_product_index') }}"><span
+                class="glyphicon glyphicon-backward"></span></a>
 
     {{ include('product/_delete_form.html.twig') }}
 </div>
