--- a/templates/crud_front_prod/index.html.twig
+++ b/templates/crud_front_prod/index.html.twig
@@ -3,38 +3,29 @@
 {% block title %}Product index{% endblock %}
 
 {% block body %}
-    <h1>Product index</h1>
+    <h1>Our products</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-
-                <th>Titre</th>
-                <th>Prix</th>
-                <th>Description</th>
-                <th>Category</th>
-                <th>image</th>
-
-            </tr>
-        </thead>
-        <tbody>
+    <div class="card-group container-sm">
         {% for product in products %}
-            <tr>
-
-                <td>{{ product.titre }}</td>
-                <td>{{ product.prix }}</td>
-                <td>{{ product.description }}</td>
-                <td >{{ product.category }}</td>
-                <td> <img src="{{ asset('uploads/' ~ product.img) }}" width="90px" height="80px" alt="">     </td>
-
-            </tr>
+            <div class="card">
+                <a h><img class="card-img-top"
+                          src="{{ asset('uploads/' ~ product.img) }}" width="70px" height="200px"
+                          alt="Card image cap"></a>
+                <div class="card-body">
+                    <h5 class="card-title">{{ product.titre }}</h5>
+                    <p class="card-text">{{ product.description }}</p>
+                    <p class="card-text">{{ product.prix }}</p>
+                    <a href="{{ path('app_crud_front_prod_show', {'id': product.id}) }}">Show</a>
+                </div>
+            </div>
         {% else %}
-            <tr>
-                <td colspan="5">no records found</td>
-            </tr>
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">no records found</h5>
+                </div>
+            </div>
         {% endfor %}
-        </tbody>
-    </table>
+    </div>
 
-
+    {{ knp_pagination_render(products) }} {# Ajoutez ceci pour afficher la pagination #}
 {% endblock %}
