--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -20,6 +20,29 @@
             <div class="card-body">
                 <h5 class="card-title">{{ category.id }}</h5>
                 <p class="card-text">{{ category.titre }}</p>
+                <hr>
+
+                {% for product in category.products %}
+                    <tr >
+                        <th>{{ product.id }}</th>
+                        <td>{{ product.titre }}</td>
+                        {#                        <td>#}
+                        {#                            <a href="{{ path('app_category_show', {'id': category.id}) }}"><span#}
+                        {#                                        class="glyphicon glyphicon-eye-open"></span></a></td>#}
+                        {#                        <td>#}
+                        {#                            <a href="{{ path('app_category_edit', {'id': category.id}) }}"><span#}
+                        {#                                        class="glyphicon glyphicon-pencil"></span></a>#}
+                        {#                        </td>#}
+                    </tr><br>
+                {% else %}
+                    <tr>
+                        <td colspan="3">no records found</td>
+                    </tr>
+                {% endfor %}
+
+
+                <hr>
+
 
 
                 <a href="{{ path('app_category_index') }}"><span
@@ -29,6 +52,7 @@
                 <a href="{{ path('app_category_edit', {'id': category.id}) }}"><span
                             class="glyphicon glyphicon-pencil"></span></a>
 
+{#                {{ dump(category.products) }}#}
 
 
 
@@ -37,5 +61,7 @@
 
     {{ include('category/_delete_form.html.twig') }}
     </div>
+
+
 
 {% endblock %}
